<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSapp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone_label">Enter Phone Number:</string>
    <string name="sms_label">Enter SMS Message:</string>
    <string name="send_sms_label">Send SMS</string>
    <string name="date">Set Date:</string>
    <string name="time">Set Time:</string>

</resources>